--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "next": "^13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reactstrap": "^9.2.0",
     "swr": "^2.2.2"
   }
 }
