--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.2",
     "reactstrap": "^9.2.0",
     "swr": "^2.2.2"
